# core

./: .gitignore  CMakeLists.txt  LICENSE  ReadMe.md
cmake/: PrometheusCore.pc.in  defines.cmake  git.cmake  version.hpp.in
include/prometheus/: macro.hpp
include/prometheus/functional/: aligned_union.hpp  enumeration.hpp  function_ref.hpp  functional.hpp  functor.hpp  hash.hpp  type_list.hpp  value_list.hpp
include/prometheus/math/: cmath.hpp  math.hpp
include/prometheus/memory/: memory.hpp  reference_wrapper.hpp  rw.hpp  unique_ptr.hpp
include/prometheus/meta/: dimension.cache.inl  dimension.hpp  enumeration.hpp  member.hpp  member.visit.inl  meta.hpp  name.hpp  string.hpp  to_string.hpp
include/prometheus/numeric/: numeric.hpp  random.hpp  random_engine.hpp
include/prometheus/platform/: cpu.hpp  environment.hpp  exception.hpp  os.hpp  platform.hpp
include/prometheus/primitive/: circle.hpp  color.hpp  ellipse.hpp  extent.hpp  point.hpp  primitive.hpp  rect.hpp  vertex.hpp
include/prometheus/string/: charconv.hpp  string.hpp  string_pool.hpp
src/platform/: cpu.cpp  environment.cpp  exception.cpp  os.cpp
test/: CMakeLists.txt  main.cpp
test/functional/: aligned_union.cpp  function_ref.cpp
test/meta/: dimension.cpp  enumeration.cpp  member.cpp
test/string/: string_pool.cpp
